# battlebots

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
proto/: battlebots.proto
src/: bench.rs  client.rs  main.rs  proto.rs  server.rs  workloads.rs
src/client/: grpc.rs  rest.rs
src/server/: grpc.rs  rest.rs
src/workloads/: inty.rs  mixed.rs  stringy.rs
