[package]
name = "battlebots"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7"
clap = { version = "4.5.29", features = ["derive", "env"] }
dotenvy = "0.15.7"
governor = "0.8.0"
hdrhistogram = "7.5.4"
names = "0.14.0"
prost = "0.13.4"
rand = "0.9.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.12.3"
